--- a/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
@@ -81,7 +81,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/Admin/Instructors" class="nav-link">
+                            <a href="~/Admin/Customers" class="nav-link">
                                 <img src="~/Asset/dist/img/ico/icon_customer.png" />
                                 <p>Customers</p>
                             </a>
@@ -133,7 +133,7 @@
                         <li class="nav-item">
                             <a href="~/Admin/BlogCategories" class="nav-link">
                                 <img src="~/Asset/dist/img/ico/icon_blog_category.png" />
-                                <p>Blog Type</p>
+                                <p>Blog Category</p>
                             </a>
                         </li>
                         <li class="nav-item">
