--- a/TheNight_JustBuy/Views/Home/Index.cshtml
+++ b/TheNight_JustBuy/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                                 <h3 class="second-line">Fresh Juice. 100% Organic</h3>
                                 <p class="third-line">A blend of freshly squeezed green apple & fruits</p>
                                 <p class="buttons">
-                                    <a href="#" class="btn btn-bold">Shop now</a>
+                                    <a href="~/Items/Index" class="btn btn-bold">Shop now</a>
                                     <a href="#" class="btn btn-thin">View lookbook</a>
                                 </p>
                             </div>
@@ -156,9 +156,7 @@
                                                 <div class="slide-down-box">
                                                     <p class="message"></p>
                                                     <div class="buttons">
-                                                        <a href="#" class="btn wishlist-btn"><i class="fa fa-heart" aria-hidden="true"></i></a>
-                                                        <a href="#" class="btn add-to-cart-btn"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i>add to cart</a>
-                                                        <a href="#" class="btn compare-btn"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                                        <a href="@Url.Action("AddItem", "Cart", new { productID = item.ProductID, quantity = 1 })" class="btn add-to-cart-btn"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i>add to cart</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -192,7 +190,7 @@
                                     </div>
                                     <p class="measure"></p>
                                     <div class="buttons">
-                                        <a href="#" class="btn add-to-cart-btn" tabindex="-1">add to cart</a>
+                                        <a href="@Url.Action("AddItem", "Cart", new { productID = expensive.ProductID, quantity = 1 })" class="btn add-to-cart-btn" tabindex="-1">add to cart</a>
                                     </div>
                                 </div>
                             </div>
@@ -210,9 +208,6 @@
                                 <a href="#" class="banner-link">
                                     <img src="~/Content/clients/images/home-01/bn-promotion-6-child-01.png" width="568" height="760" alt="img msv">
                                 </a>
-                            </div>
-                            <div class="img-moving position-2">
-                                <img src="~/Content/clients/images/home-01/bn-promotion-6-child-02.png" width="745" height="682" alt="img msv">
                             </div>
                         </div>
                         <div class="text-content">
@@ -259,9 +254,7 @@
                                                 <div class="slide-down-box">
                                                     <p class="message"></p>
                                                     <div class="buttons">
-                                                        <a href="#" class="btn wishlist-btn"><i class="fa fa-heart" aria-hidden="true"></i></a>
-                                                        <a href="#" class="btn add-to-cart-btn"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i>add to cart</a>
-                                                        <a href="#" class="btn compare-btn"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                                        <a href="@Url.Action("AddItem", "Cart", new { productID = item.ProductID, quantity = 1 })" class="btn add-to-cart-btn"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i>add to cart</a>
                                                     </div>
                                                 </div>
                                             </div>
