--- a/TheNight_JustBuy/Views/Items/Detail.cshtml
+++ b/TheNight_JustBuy/Views/Items/Detail.cshtml
@@ -76,47 +76,24 @@
                     <div class="quantity-box">
                         <span class="title">Quantity:</span>
                         <div class="qty-input">
-                            <input type="text" name="qty12554" value="1" data-max_value="20" data-min_value="1" data-step="1">
-                            <a href="#" class="qty-btn btn-up"><i class="fa fa-caret-up" aria-hidden="true"></i></a>
-                            <a href="#" class="qty-btn btn-down"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                            <input readonly type="text" name="qty12554" id="txtQty" value="1" data-max_value="20" data-min_value="1" data-step="1">
                         </div>
                     </div>
                     <div class="total-price-contain">
                         <span class="title">Total Price:</span>
-                        <p class="price">£199.99</p>
+                        <p class="price">$@detail.UnitPrice</p>
                     </div>
                     <div class="buttons">
-                        <a href="#" class="btn add-to-cart-btn">add to cart</a>
-                        <p class="pull-row">
-                            <a href="#" class="btn wishlist-btn">wishlist</a>
-                            <a href="#" class="btn compare-btn">compare</a>
-                        </p>
+                        <a href="@Url.Action("AddItem", "Cart", new { productID = detail.ProductID , quantity = 1 })" class="btn add-to-cart-btn cart-btn">add to cart</a>
                     </div>
-                    <div class="location-shipping-to">
-                        <span class="title">Ship to:</span>
-                        <select name="shipping_to" class="country">
-                            <option value="-1">Select Country</option>
-                            <option value="america">America</option>
-                            <option value="france">France</option>
-                            <option value="germany">Germany</option>
-                            <option value="japan">Japan</option>
-                        </select>
-                    </div>
+
                     <div class="social-media">
                         <ul class="social-list">
-                            <li><a href="#" class="social-link"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="#" class="social-link"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#" class="social-link"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com/intent/tweet?text=" class="social-link"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.facebook.com/sharer/sharer.php?u=" class="social-link"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.pinterest.com/" class="social-link"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                             <li><a href="#" class="social-link"><i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
-                            <li><a href="#" class="social-link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="acepted-payment-methods">
-                        <ul class="payment-methods">
-                            <li><img src="~/Content/clients/images/card1.jpg" alt="" width="51" height="36"></li>
-                            <li><img src="~/Content/clients/images/card2.jpg" alt="" width="51" height="36"></li>
-                            <li><img src="~/Content/clients/images/card3.jpg" alt="" width="51" height="36"></li>
-                            <li><img src="~/Content/clients/images/card4.jpg" alt="" width="51" height="36"></li>
+                            <li><a href="https://www.instagram.com/" class="social-link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -316,13 +293,13 @@
                         <li class="product-item">
                             <div class="contain-product layout-default">
                                 <div class="product-thumb">
-                                    <a href="#" class="link-to-product">
+                                    <a href="@Url.Action("Detail", "Items", new {id = item.ProductID })" class="link-to-product">
                                         <img src="@Url.Content(item.Thumbnail)" alt="dd" width="270" height="270" class="product-thumnail">
                                     </a>
                                 </div>
                                 <div class="info">
                                     <b class="categories">@item.Category.CategoryName</b>
-                                    <h4 class="product-title"><a href="#" class="pr-name">@item.ProductName</a></h4>
+                                    <h4 class="product-title"><a href="@Url.Action("Detail", "Items", new {id = item.ProductID })" class="pr-name">@item.ProductName</a></h4>
                                     <div class="price ">
                                         <ins><span class="price-amount"><span class="currencySymbol"></span>@string.Format("{0:N0}", (decimal)detail.UnitPrice)₫</span></ins>
                                         <del><span class="price-amount"><span class="currencySymbol"></span>@string.Format("{0:N0}", (decimal)detail.OldUnitPrice)₫</span></del>
@@ -330,9 +307,7 @@
                                     <div class="slide-down-box">
                                         <p class="message"></p>
                                         <div class="buttons">
-                                            <a href="#" class="btn wishlist-btn"><i class="fa fa-heart" aria-hidden="true"></i></a>
-                                            <a href="#" class="btn add-to-cart-btn"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i>add to cart</a>
-                                            <a href="#" class="btn compare-btn"><i class="fa fa-random" aria-hidden="true"></i></a>
+                                            <a href="@Url.Action("AddItem", "Cart", new { productID = item.ProductID, quantity = 1 })" class="btn add-to-cart-btn"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i>add to cart</a>
                                         </div>
                                     </div>
                                 </div>
@@ -342,8 +317,6 @@
                     }
                 </ul>
             </div>
-
-
         </div>
     </div>
 </div>
