--- a/TheNight_JustBuy/Views/Shared/_Layout.cshtml
+++ b/TheNight_JustBuy/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="~/Content/clients/css/slick.min.css">
     <link rel="stylesheet" href="~/Content/clients/css/style.css">
     <link rel="stylesheet" href="~/Content/clients/css/main-color01.css">
+    <link href="~/Asset/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css" rel="stylesheet" />
+    <link href="~/Asset/plugins/toastr/toastr.min.css" rel="stylesheet" />
 </head>
 <body class="biolife-body">
 
@@ -35,6 +37,8 @@
     <script src="~/Content/clients/js/slick.min.js"></script>
     <script src="~/Content/clients/js/biolife.framework.js"></script>
     <script src="~/Content/clients/js/functions.js"></script>
+    <script src="~/Asset/plugins/sweetalert2/sweetalert2.min.js"></script>
+    <script src="~/Asset/plugins/toastr/toastr.min.js"></script>
     @RenderSection("ClientScript", false)
 </body>
 
