--- a/TheNight_JustBuy/Views/Blog/Detail.cshtml
+++ b/TheNight_JustBuy/Views/Blog/Detail.cshtml
@@ -84,13 +84,13 @@
                 <!--Comment Block-->
                 <div class="post-comments">
                     <h3 class="cmt-title">Comments<sup>(@blog.BlogComments.Count)</sup></h3>
-
+                    <h4 style="color:blue">@ViewBag.MessComment</h4>
                     <div class="comment-form">
                         @using (Html.BeginForm("Comment", "Blog", FormMethod.Post, new { @class = "comment-form", @id = "commentform", enctype = "multipart/form-data" }))
                         {
                             <p class="form-row">
                                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Write your comment"></textarea>
-                                <a href="#" class="current-author"><img src="~/Content/clients/images/blogpost/viewer-avt.png" width="41" height="41" alt=""></a>
+                                
                             </p>
                             @Html.Hidden("blogID", blog.BlogID)
                             <p class="form-row last-btns">
@@ -127,7 +127,7 @@
                                         </div>
 
                                     }
-                                    </div>
+                                </div>
                             </li>
                         </ol>
 
