--- a/TheNight_JustBuy/Views/Register/Index.cshtml
+++ b/TheNight_JustBuy/Views/Register/Index.cshtml
@@ -113,7 +113,7 @@
                                 <li>Track new orders</li>
                                 <li>Save items to your Wishlist</li>
                             </ul>
-                            <a href="@Url.Action("Index", "Login")" class="btn btn-bold">Sign in</a>
+                            <a href="@Url.Action("Index", "CustomerLogin")" class="btn btn-bold">Sign in</a>
                         </div>
                     </div>
                 </div>
