--- a/TheNight_JustBuy/Views/Shared/FilterProducts.cshtml
+++ b/TheNight_JustBuy/Views/Shared/FilterProducts.cshtml
@@ -21,155 +21,13 @@
         </div>
 
         <div class="widget biolife-filter">
-            <h4 class="wgt-title">Shipping & Pickup</h4>
-            <div class="wgt-content">
-                <ul class="cat-list">
-                    <li class="cat-list-item"><a href="#" class="cat-link">Show all</a></li>
-                    <li class="cat-list-item"><a href="#" class="cat-link">2- Day shipping</a></li>
-                    <li class="cat-list-item"><a href="#" class="cat-link">Shop to Home</a></li>
-                    <li class="cat-list-item"><a href="#" class="cat-link">Free Pickup</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="widget price-filter biolife-filter">
-            <h4 class="wgt-title">Price</h4>
-            <div class="wgt-content">
-                <div class="frm-contain">
-                    <form action="#" name="price-filter" id="price-filter" method="get">
-                        <p class="f-item">
-                            <label for="pr-from">$</label>
-                            <input class="input-number" type="number" id="pr-from" value="" name="price-from">
-                        </p>
-                        <p class="f-item">
-                            <label for="pr-to">to $</label>
-                            <input class="input-number" type="number" id="pr-to" value="" name="price-from">
-                        </p>
-                        <p class="f-item"><button class="btn-submit" type="submit">go</button></p>
-                    </form>
-                </div>
-                <ul class="check-list bold single">
-                    <li class="check-list-item"><a href="#" class="check-link">$0 - $5</a></li>
-                    <li class="check-list-item"><a href="#" class="check-link">$5 - $10</a></li>
-                    <li class="check-list-item"><a href="#" class="check-link">$15 - $20</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="widget biolife-filter">
             <h4 class="wgt-title">Brand</h4>
             <div class="wgt-content">
-                <ul class="check-list multiple">
+                <ul class="cat-list">
                     @foreach (var item in listSup)
                     {
-                        <li class="check-list-item"><a href="@Url.Action("Brand", "Items", new {id = item.SupplierID })" class="check-link">@item.CompanyName</a></li>
+                        <li class="cat-list-item"><a href="@Url.Action("Index", "Brand", new {id = item.SupplierID })" class="cat-link">@item.CompanyName</a></li>
                     }
-                </ul>
-            </div>
-        </div>
-
-        <div class="widget biolife-filter">
-            <h4 class="wgt-title">Color</h4>
-            <div class="wgt-content">
-                <ul class="color-list">
-                    <li class="color-item"><a href="#" class="c-link"><span class="symbol img-color"></span>Multi</a></li>
-                    <li class="color-item"><a href="#" class="c-link"><span class="symbol hex-code color-01"></span>Red</a></li>
-                    <li class="color-item"><a href="#" class="c-link"><span class="symbol hex-code color-02"></span>Orrange</a></li>
-                    <li class="color-item"><a href="#" class="c-link"><span class="symbol hex-code color-03"></span>Other</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="widget biolife-filter">
-            <h4 class="wgt-title">Popular Size</h4>
-            <div class="wgt-content">
-                <ul class="check-list bold multiple">
-                    <li class="check-list-item"><a href="#" class="check-link">8oz</a></li>
-                    <li class="check-list-item"><a href="#" class="check-link">15oz</a></li>
-                    <li class="check-list-item"><a href="#" class="check-link">6oz</a></li>
-                    <li class="check-list-item"><a href="#" class="check-link">30oz</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="widget biolife-filter">
-            <h4 class="wgt-title">Number of Pieces</h4>
-            <div class="wgt-content">
-                <ul class="check-list bold">
-                    <li class="check-list-item"><a href="#" class="check-link">1 to 9</a></li>
-                    <li class="check-list-item"><a href="#" class="check-link">10 to 15</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="widget biolife-filter">
-            <h4 class="wgt-title">Recently Viewed</h4>
-            <div class="wgt-content">
-                <ul class="products">
-                    <li class="pr-item">
-                        <div class="contain-product style-widget">
-                            <div class="product-thumb">
-                                <a href="#" class="link-to-product" tabindex="0">
-                                    <img src="~/Content/clients/images/products/p-13.jpg" alt="dd" width="270" height="270" class="product-thumnail">
-                                </a>
-                            </div>
-                            <div class="info">
-                                <b class="categories">Fresh Fruit</b>
-                                <h4 class="product-title"><a href="#" class="pr-name" tabindex="0">National Fresh Fruit</a></h4>
-                                <div class="price">
-                                    <ins><span class="price-amount"><span class="currencySymbol">£</span>85.00</span></ins>
-                                    <del><span class="price-amount"><span class="currencySymbol">£</span>95.00</span></del>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="pr-item">
-                        <div class="contain-product style-widget">
-                            <div class="product-thumb">
-                                <a href="#" class="link-to-product" tabindex="0">
-                                    <img src="~/Content/clients/images/products/p-14.jpg" alt="dd" width="270" height="270" class="product-thumnail">
-                                </a>
-                            </div>
-                            <div class="info">
-                                <b class="categories">Fresh Fruit</b>
-                                <h4 class="product-title"><a href="#" class="pr-name" tabindex="0">National Fresh Fruit</a></h4>
-                                <div class="price">
-                                    <ins><span class="price-amount"><span class="currencySymbol">£</span>85.00</span></ins>
-                                    <del><span class="price-amount"><span class="currencySymbol">£</span>95.00</span></del>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="pr-item">
-                        <div class="contain-product style-widget">
-                            <div class="product-thumb">
-                                <a href="#" class="link-to-product" tabindex="0">
-                                    <img src="~/Content/clients/images/products/p-10.jpg" alt="dd" width="270" height="270" class="product-thumnail">
-                                </a>
-                            </div>
-                            <div class="info">
-                                <b class="categories">Fresh Fruit</b>
-                                <h4 class="product-title"><a href="#" class="pr-name" tabindex="0">National Fresh Fruit</a></h4>
-                                <div class="price">
-                                    <ins><span class="price-amount"><span class="currencySymbol">£</span>85.00</span></ins>
-                                    <del><span class="price-amount"><span class="currencySymbol">£</span>95.00</span></del>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="widget biolife-filter">
-            <h4 class="wgt-title">Product Tags</h4>
-            <div class="wgt-content">
-                <ul class="tag-cloud">
-                    <li class="tag-item"><a href="#" class="tag-link">Fresh Fruit</a></li>
-                    <li class="tag-item"><a href="#" class="tag-link">Natural Food</a></li>
-                    <li class="tag-item"><a href="#" class="tag-link">Hot</a></li>
-                    <li class="tag-item"><a href="#" class="tag-link">Organics</a></li>
-                    <li class="tag-item"><a href="#" class="tag-link">Dried Organic</a></li>
                 </ul>
             </div>
         </div>
